<resources>
    <string name="app_name">MyMealPlan</string>

    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="id">Id number</string>
    <string name="title_activity_signup">Signup</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="or">Or</string>
    <string name="signup">Sign up</string>
    <string name="have_meal_plan">Do you have meal plan? (Check if yes, uncheck if no)</string>
    <string name="do_you_have_meal_plan">Doy you have meal plan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>

    <string name="password_not_confirmed">Make sure you confirm your password!</string>
    <string name="name_is_required">Name is required</string>
    <string name="lname_is_required">Surname is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="id_is_required">Id is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="pconfirm_is_required">Password confirmation is required</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="friends">Friends</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="search">Search</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_profile">User profile</string>


    <string name="add_to_friends">Add to friends</string>
    <string name="request_is_sent">Your request is sent</string>
    <string name="accept_request">Accept request</string>

    <string name="my_requests">Incoming Requests</string>
    <string name="my_friends">My Friends</string>

    <string name="share_lunch">Share lunch</string>
    <string name="share_dinner">Share dinner</string>
    
    <string name="take_back_lunch">Take back lunch</string>
    <string name="take_back_dinner">Take back dinner</string>

    <string name="taken_meal_plans">Taken meal plans</string>
    <string name="open_access_meal_plans">Open access meal plans</string>

    <string name="used_it">Used it</string>
    <string name="take_it">Take it</string>

    <string name="title_activity_activate_email">Email Activation</string>
    <string name="activation_email_sent">Your activation email has been sent to: </string>
    <string name="verify_email">Please activate your email in order to use Meal Plan saver application. </string>
    <string name="activated"> OK, activated </string>
    <string name="title_activity_settings">Settings</string>

</resources>
