<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yerchik.mealplan2.UserProfileActivity"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/profileHeaderInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
            <TextView android:id="@+id/profileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView android:id="@+id/friendsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:visibility="gone"/>

            <TextView android:id="@+id/sharedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView android:id="@+id/takenCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/profileRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button android:id="@+id/requestFriendshipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_friends"
            android:background="@drawable/button_custom"
            android:textColor="#fff"
            android:visibility="gone"
            android:onClick="requestFriendship"/>

        <Button android:id="@+id/acceptFriendshipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_request"
            android:background="@drawable/button_custom"
            android:textColor="#fff"
            android:visibility="gone" />

        <TextView android:id="@+id/requestSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_is_sent"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/material_grey_300"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>
